fixed https issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
+@import url(https://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
 :root {
   font-family: -apple-system, BlinkMacSystemFont, 'Droid Arabic Kufi',sans-serif;
   line-height: 1.5;
